--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,18 +325,22 @@ img {
 }
 
 .skills__html {
-  width: 95%;
-}
-
-.skills__css {
-  width: 85%;
-}
-
-.skills__js {
   width: 65%;
 }
 
+.skills__css {
+  width: 55%;
+}
+
+.skills__js {
+  width: 35%;
+}
+
 .skills__ux {
+  width: 75%;
+}
+
+.skills__mr {
   width: 85%;
 }
 
