--- a/assets/css/wstyles.css
+++ b/assets/css/wstyles.css
@@ -192,54 +192,54 @@ img {
   right: 0;
 }
 
-/*===== HOME =====*/
-.home {
+/*===== cprofile =====*/
+.cprofile {
   position: relative;
   row-gap: 5rem;
   padding: 4rem 0 5rem;
 }
 
-.home__data {
+.cprofile__data {
   align-self: center;
 }
 
-.home__title {
+.cprofile__title {
   font-size: var(--big-font-size);
   margin-bottom: var(--mb-5);
 }
 
-.home__title-color {
+.cprofile__title-color {
   color: var(--first-color);
 }
 
-.home__social {
+.cprofile__social {
   display: flex;
   flex-direction: column;
 }
 
-.home__social-icon {
+.cprofile__social-icon {
   width: max-content;
   margin-bottom: var(--mb-2);
   font-size: 1.5rem;
   color: var(--second-color);
 }
 
-.home__social-icon:hover {
+.cprofile__social-icon:hover {
   color: var(--first-color);
 }
 
-.home__img {
+.cprofile__img {
   position: absolute;
   right: 0;
   bottom: 0;
   width: 260px;
 }
 
-.home__blob {
+.cprofile__blob {
   fill: var(--first-color);
 }
 
-.home__blob-img {
+.cprofile__blob-img {
   width: 360px;
 }
 
@@ -418,29 +418,29 @@ img {
 
 /* ===== MEDIA QUERIES=====*/
 @media screen and (max-width: 320px) {
-  .home {
+  .cprofile {
     row-gap: 2rem;
   }
-  .home__img {
+  .cprofile__img {
     width: 200px;
   }
 }
 
 @media screen and (min-width: 576px) {
-  .home {
+  .cprofile {
     padding: 4rem 0 2rem;
   }
-  .home__social {
+  .cprofile__social {
     padding-top: 0;
     padding-bottom: 2.5rem;
     flex-direction: row;
     align-self: flex-end;
   }
-  .home__social-icon {
+  .cprofile__social-icon {
     margin-bottom: 0;
     margin-right: var(--mb-4);
   }
-  .home__img {
+  .cprofile__img {
     width: 300px;
     bottom: 25%;
   }
@@ -500,10 +500,10 @@ img {
   .nav__link {
     color: var(--second-color);
   }
-  .home {
+  .cprofile {
     padding: 8rem 0 2rem;
   }
-  .home__img {
+  .cprofile__img {
     width: 400px;
     bottom: 10%;
   }
@@ -530,10 +530,10 @@ img {
     margin-left: auto;
     margin-right: auto;
   }
-  .home {
+  .cprofile {
     padding: 10rem 0 2rem;
   }
-  .home__img {
+  .cprofile__img {
     width: 450px;
   }
 }
