--- a/assets/css/wstyles.css
+++ b/assets/css/wstyles.css
@@ -541,3 +541,15 @@ img {
     width: 450px;
   }
 }
+
+.maps__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0;
+}
+
+.maps__container iframe {
+  max-width: 100%;
+  border-radius: 0.5rem;
+}
