--- a/assets/css/wstyles.css
+++ b/assets/css/wstyles.css
@@ -395,7 +395,7 @@ img {
 /* ===== FOOTER =====*/
 .footer {
   background-color: var(--second-color);
-  color: #fff;
+  color: #f0f;
   text-align: center;
   font-weight: var(--font-semi);
   padding: 2rem 0;
