--- a/assets/css/wstyles.css
+++ b/assets/css/wstyles.css
@@ -392,7 +392,7 @@ img {
 /* ===== FOOTER =====*/
 .footer {
   background-color: var(--second-color);
-  color: #f0f;
+  color: #fff;
   text-align: center;
   font-weight: var(--font-semi);
   padding: 2rem 0;
