row gep cprofile

--- a/assets/css/wstyles.css
+++ b/assets/css/wstyles.css
@@ -196,8 +196,9 @@ img {
 /*===== h1file =====*/
 .cprofile {
   position: relative;
-  row-gap: 5rem;
-  padding: 4rem 0 5rem;
+  row-gap: 0rem;
+  /* padding: 4rem 0 5rem; */
+  padding: 0;
 }
 
 .cprofile__data {
