--- a/assets/css/wstyles.css
+++ b/assets/css/wstyles.css
@@ -370,6 +370,9 @@ img {
 }
 
 /* ===== CONTACT =====*/
+.contact__container {
+  row-gap: 2rem;
+}
 .contact__input {
   width: 100%;
   font-size: var(--normal-font-size);
@@ -461,6 +464,11 @@ img {
     column-gap: 2rem;
     padding-top: 2rem;
   }
+  .contact__container {
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 2rem;
+    padding-top: 2rem;
+  }
   .contact__form {
     width: 360px;
     padding-top: 2rem;
@@ -523,6 +531,10 @@ img {
   }
   .work__container {
     grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
+  .contact__container {
+    grid-template-columns: repeat(4, 1fr);
     column-gap: 2rem;
   }
 }
