--- a/assets/css/wstyles.css
+++ b/assets/css/wstyles.css
@@ -188,6 +188,15 @@ img {
   top: 2rem;
   background-color: var(--first-color);
 }
+.active1::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 0.18rem;
+  left: 0;
+  top: 2rem;
+  background-color: var(--first-color);
+}
 
 /*=== Show menu ===*/
 .show {
